# aegis

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  index.html  pyproject.toml  wrangler.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  test.yml
aegis/: __init__.py  code_fence.py  design_dna.py  llm_client.py  pipeline.py  result.py  stack_detection.py  subprocess_runner.py
aegis-bench/: METHODOLOGY.md  PLAN_V2.md
aegis-bench/cohort/01-palette-substitution/: README.md  brief.json  expected.json
aegis-bench/cohort/02-forbidden-pattern-apple-flat/: README.md  brief.json  expected.json
aegis-bench/cohort/03-clean-pass/: README.md  brief.json  expected.json
aegis-bench/cohort/09-node-deps-missing/: README.md  (+2 more)
aegis-bench/results/: 2026-05-23.json
aegis-bench/scripts/: run_aegis.py
aegis/checks/: __init__.py  _llm_helpers.py  _node_helpers.py  _python_helpers.py  _ts_helpers.py  base.py  brace_balance.py  css_completeness.py  design_fidelity.py  duplicate_type_declarations.py  feature_coverage.py  hook_destructure_consistency.py  html_js_id_parity.py  import_case_consistency.py  interactivity.py  js_syntax.py  named_import_consistency.py  node_deps_completeness.py  npm_install.py  pytest_check.py  python_completeness.py  python_deps_completeness.py  python_imports.py  react_prop_consistency.py  router_prefix_consistency.py  static_imports.py  tsc.py
aegis_cli/: __init__.py  __main__.py
docs/: CODE_EXTRACTION_PLAN.md  LAYER_INDEX.md
tests/unit/: test_brace_balance.py  test_css_completeness.py  test_design_fidelity.py  test_duplicate_type_declarations.py  test_feature_coverage.py  test_hook_destructure_consistency.py  test_html_js_id_parity.py  test_import_case_consistency.py  test_interactivity.py  test_js_syntax.py  test_named_import_consistency.py  test_node_deps_completeness.py  test_npm_install.py  test_pytest_check.py  test_python_completeness.py  test_python_deps_completeness.py  test_python_imports.py  test_react_prop_consistency.py  test_router_prefix_consistency.py  test_static_imports.py  test_tsc.py
tools/: bench_summary.py  calibrate_llm_cases.py
(+107 files in other folders)
