[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "aegis-validator"
version = "0.1.0.dev0"
description = "A deterministic validator for AI-generated code."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Andraste Labs", email = "github@andrastelabs.com" }
]
keywords = ["ai", "code-generation", "validation", "static-analysis", "ast", "llm"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    # No runtime deps for the core validator yet. Built-in stdlib only.
    # The anthropic SDK is an optional runtime dep of AnthropicClient
    # (see `[project.optional-dependencies].anthropic` below).
]

[project.optional-dependencies]
anthropic = [
    "anthropic>=0.34",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "anthropic>=0.34",
]

[project.scripts]
aegis = "aegis_cli.__main__:main"

[project.urls]
homepage = "https://aegis.andrastelabs.com"
repository = "https://github.com/andraste-labs/aegis"
documentation = "https://github.com/andraste-labs/aegis/tree/main/docs"
issues = "https://github.com/andraste-labs/aegis/issues"
changelog = "https://github.com/andraste-labs/aegis/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["aegis", "aegis_cli"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "ARG"]
ignore = ["E501"]  # line-length handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
